# projects-c

./: README.md
Atividades Ajalmar/: AV1 (2022.2).rar  README.MD  README.txt.txt
Atividades Ajalmar/AV1 (2022.2)/: README.txt  Updates.txt  index.c  init.c  init.h  main.c  pessoa.c  pessoa.h  pet.c  pet.h  tempCodeRunnerFile.c  teste.c
Atividades Ajalmar/AV1 (2022.2) - Copia/: README.txt  init.c  init.h  main.c  pessoa.c  pessoa.h  pet.c  pet.h
Atividades Ajalmar/AV1 (2022.2) - Copia/dd/: main.c  pessoas.c  pessoas.h  pets.c  pets.h
Atividades Ajalmar/AV2(2022.2)/: CMakeLists.txt  init.c  init.h  main.c  pet.c  pet.h  user.c  user.h
Atividades Ajalmar/AV2(2022.2)/testes/: teste.c
Atividades Ajalmar/Exercicios com comando for/ex1/: ex1.c
Atividades Ajalmar/Exercicios com comando for/ex2/: ex2.c
Atividades Ajalmar/Exercicios com comando for/ex3/: ex3(OK).c  ex3.c
Atividades Ajalmar/fibonachi/: README.txt  README.txt.txt
Introdução a programação (2022.2 - Ajalmar)/: README.MD
Introdução a programação (2022.2 - Ajalmar)/AV1 (2022.2)/: init.h  main.c  pessoa.c  pessoa.h  pet.c
Introdução a programação (2022.2 - Ajalmar)/AV2 (2022.2)/: README.MD  init.c  pet.c  pet.h  user.c  user.h
Introdução a programação (2022.2 - Ajalmar)/AV2 (2022.2) - Copia/: CMakeLists.txt  README.MD  init.c  init.h  pet.h  user.c
Introdução a programação (2022.2 - Ajalmar)/AV2(2022.2)/: README.MD  init.c  pet.c  user.c
Introdução a programação (2022.2 - Ajalmar)/fibonachi/: fibo.c
Introdução a programação (2022.2 - Ajalmar)/primos/: README.txt  primos.c
(+27 files in other folders)
